--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll
 spring.datasource.username=root
 spring.datasource.password=Matrixkashif@1
+spring.jpa.hibernate.ddl-auto=update
