--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.profiles.active= dev
-
-environment = COMMON 
+environment=COMMON
+spring.profiles.active=dev
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll
-spring.datasource.username=root
-spring.datasource.password=Matrixkashif@1
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSOWRD:password}
 spring.jpa.hibernate.ddl-auto=update
