[Kashif]Added: included other fields in dto and model and validation on dto and exceptions are handled properly for date and remaining fields

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,10 @@
 environment=DEV
 
+
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=ERROR
-logging.level.com.bridgelabz=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n 
+logging.level.com.cg.employeepayroll=DEBUG
+
+#logging pattern for console and file
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
